# ai_learning_tracker

./: .gitignore  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  progress.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: progress.py  user.py
backend/app/schemas/: schemas.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: index.ts
